@@ -12,12 +12,36 @@
  *************************************************************************/
 package com.xc.oom;
 
+import net.sf.cglib.proxy.Enhancer;
+import net.sf.cglib.proxy.MethodInterceptor;
+import net.sf.cglib.proxy.MethodProxy;
+
+import java.lang.reflect.Method;
+
 /**
- * XXXXXXXXXXXXXXXXXXXXX
+ * vm Args: -XX:PermSize=10M -XX:MaxPermSize=10M
  *
  * @author xiachuan at 2016/12/14 16:33。
  */
 
 public class JavaMethodAreaOOM {
+
+    public static void main(final String[] args) {
+
+        while (true){
+            Enhancer enhancer = new Enhancer();
+            enhancer.setSuperclass(OOMObject.class);
+            enhancer.setUseCache(false);
+            enhancer.setCallback(new MethodInterceptor() {
+                public Object intercept(Object o, Method method, Object[] objects, MethodProxy methodProxy) throws Throwable {
+                    return methodProxy.invokeSuper(o,args);
+                }
+            });
+            enhancer.create();
+        }
+
+    }
+
+    static class OOMObject{}
 }
 
