@@ -12,12 +12,26 @@
  *************************************************************************/
 package com.xc.oom;
 
+import java.util.ArrayList;
+import java.util.List;
+
 /**
- * XXXXXXXXXXXXXXXXXXXXX
+ * vm Args: -XX:PermSize=10M -XX:MaxPermSize=10M
  *
  * @author xiachuan at 2016/12/14 16:10。
  */
 
 public class RuntimeConstantPoolOOM {
+
+    public static void main(String[] args) {
+
+        //使用List保持常量池引用，避免Full GC 回收常量池。
+        List<String> list = new ArrayList<String >();
+        int i = 0;
+
+        while (true){
+            list.add(String.valueOf(i++).intern());
+        }
+    }
 }
 
